--- a/server-api/pom.xml
+++ b/server-api/pom.xml
@@ -9,16 +9,20 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>frs-springboot-rest-api</artifactId>
+	<artifactId>server-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>frs-springboot-rest-api</name>
+	<name>server-api</name>
 	<description>RESTful Web Service for Flight Reservation System</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -33,10 +37,6 @@
 	        <artifactId>spring-boot-devtools</artifactId>
 	        <optional>true</optional>
     	</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
     	<dependency>
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -45,7 +45,6 @@
 		  <groupId>org.postgresql</groupId>
 		  <artifactId>postgresql</artifactId>
 		</dependency>
-
 	</dependencies>
 
 	<build>
