--- a/server-api/pom.xml
+++ b/server-api/pom.xml
@@ -33,6 +33,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <scope>test</scope>  
+		</dependency> 
+		<dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-devtools</artifactId>
 	        <optional>true</optional>
@@ -45,6 +50,11 @@
 		  <groupId>org.postgresql</groupId>
 		  <artifactId>postgresql</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -54,6 +64,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
 	</build>
 
 </project>
